--- a/faixas etarias/idade.html
+++ b/faixas etarias/idade.html
@@ -6,7 +6,7 @@
     <title>Verificador de Idade!</title>
 </head>
 
-<body onload="carregar()">
+<body onload= "carregar()">
 <style>
      body{
         background: rgb(234, 254, 255) ;
@@ -51,12 +51,13 @@
  
 <section>
     <div>
+
         <p>Ano de Nascimento:</p>
             <input type="number" name="txtano" id="txtano" min="0">
         <p>Sexo:
             <input type="radio" name="radsex" id="mas" checked>
             <label for="mas">Masculino</label>
-            <input type="radio" name="radsex" id="fem">
+            <input type="radio" name="radsex" id="fem" >
             <label for="fem">Femenino</label>
         </p>
         <p>
@@ -83,11 +84,11 @@
         var fsex = document.getElementsByName ('radsex')
         var idade = ano - Number(fano.value)
         var genero = ''
-        var img = document. createComment('img')
-        img.setAttribute('id','foto')
+        var img = document. createElement("img")
+        // img.setAttribute('id','foto')
         //res.innerHTML= `Idade calculada: ${idade}`-aparecer a idade
         if(fsex[0].checked){
-            genero = 'Homem'
+            genero = 'homem'
             if(idade >=0 && idade< 12){
                 //criança
                 img.setAttribute('src', 'menino.png')
@@ -105,10 +106,10 @@
                 img.setAttribute('src', 'idoso.png')
             }
         }else if(fsex[1].checked){
-            genero= 'Mulher'
+            genero= 'mulher'
             if(idade >=0 && idade< 12){
                 //criança
-                img.setAttribute('src', 'manina.png')
+                img.setAttribute('src', 'menina.png')
 
             }else if (idade >12 && idade <= 18 ){
                 //jovem
