--- a/faixas etarias/idade.html
+++ b/faixas etarias/idade.html
@@ -93,11 +93,11 @@
                 //criança
                 img.setAttribute('src', 'menino.png')
 
-            }else if (idade >12 && idade <= 18 ){
+            }else if (idade >=12 && idade <= 18 ){
                 //jovem
                 img.setAttribute('src', 'jovem humem.png')
 
-            }else if (idade >19 && idade <=59 ){
+            }else if (idade >=19 && idade <=59 ){
                 //adulto
                 img.setAttribute('src', 'homem.png')
 
@@ -110,12 +110,10 @@
             if(idade >=0 && idade< 12){
                 //criança
                 img.setAttribute('src', 'menina.png')
-
-            }else if (idade >12 && idade <= 18 ){
-                //jovem
+            }else if (idade >=12 && idade <= 18){
                 img.setAttribute('src', 'jovem mulher.png')
 
-            }else if (idade >19 && idade <=59 ){
+            }else if (idade >= 19 && idade <=59 ){
                 //adulto
                 img.setAttribute('src', 'mulher.png')
 
